Cambios tabla y limpieza final

--- a/views/summarystatscont22.htm
+++ b/views/summarystatscont22.htm
@@ -1,11 +1,11 @@
 
 <table style="text-align:center"><caption><strong>Table 1. Descriptive statistics – continuous variables</strong></caption>
 <tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Statistic</td><td>N</td><td>Mean</td><td>St. Dev.</td><td>Min</td><td>Max</td></tr>
-<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">log_nominal_income</td><td>16,397</td><td>8.57</td><td>0.55</td><td>5.79</td><td>10.32</td></tr>
-<tr><td style="text-align:left">log_real_income</td><td>16,397</td><td>8.48</td><td>0.53</td><td>5.02</td><td>10.20</td></tr>
-<tr><td style="text-align:left">exp_log_nominal_income</td><td>16,397</td><td>6,437.12</td><td>5,528.65</td><td>326.67</td><td>30,303.02</td></tr>
-<tr><td style="text-align:left">exp_log_real_income</td><td>16,397</td><td>5,819.77</td><td>4,917.24</td><td>151.91</td><td>26,956.21</td></tr>
-<tr><td style="text-align:left">age</td><td>16,397</td><td>39.63</td><td>13.39</td><td>19</td><td>94</td></tr>
-<tr><td style="text-align:left">Weekly_Hours_Worked</td><td>16,397</td><td>47.21</td><td>14.91</td><td>1.00</td><td>84.00</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Log. Nominal hourly wage</td><td>16,397</td><td>8.57</td><td>0.55</td><td>5.79</td><td>10.32</td></tr>
+<tr><td style="text-align:left">Log. Real hourly wage</td><td>16,397</td><td>8.48</td><td>0.53</td><td>5.02</td><td>10.20</td></tr>
+<tr><td style="text-align:left">Nominal hourly wage</td><td>16,397</td><td>6,437.12</td><td>5,528.65</td><td>326.67</td><td>30,303.02</td></tr>
+<tr><td style="text-align:left">Real hourly wage</td><td>16,397</td><td>5,819.77</td><td>4,917.24</td><td>151.91</td><td>26,956.21</td></tr>
+<tr><td style="text-align:left">Age</td><td>16,397</td><td>39.63</td><td>13.39</td><td>19</td><td>94</td></tr>
+<tr><td style="text-align:left">Weekly work hours</td><td>16,397</td><td>47.21</td><td>14.91</td><td>1.00</td><td>84.00</td></tr>
 <tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td colspan="6" style="text-align:left">Note: This table presents the descriptivte statistics for the continuous variables used in this project.</td></tr>
 </table>
